[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patrolling_zoo"
version = "0.0.1"
authors = [
  { name="Anthony Goeckner" },
  { name="Nicolas Martinet" },
  { name="Xinliang Li" },
  { name="Yueyuan Sui" },
]
description = "Patrolling environment for PettingZoo."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = [
    "patrolling_zoo",
    "algorithm",
    "test",
    "patrolling_zoo.env",
]