[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdzoo"
version = "0.0.1"
authors = [
  { name="Gyaan Antia" },
]
description = "Search and Deliver environment for PettingZoo."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = [
    "sdzoo",
    "sdzoo.env",
    "test",
    "onpolicy",
    "onpolicy.algorithms",
    "onpolicy.algorithms.r_mappo",
    "onpolicy.algorithms.r_mappo.algorithm",
    "onpolicy.algorithms.utils",
    "onpolicy.utils",
]